assets/CSS/style.css
:root {
    --primary-color: #0b0d0ef5;
    --secondary-color: #ebf0f3;
    --tertiary-color: #bddaee;
}
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

body {  
    background-color: var(--tertiary-color);
}
img {
    float: right;
    width:  100px;
    height: 100px;
    object-fit: cover;
  }
header {
    text-decoration: none;
    padding: 0 0 0 40px;
    display: flex;
    justify-self: space-between;
    background-color: var(--primary-color);
}

header h1 {
    color: var(--tertiary-color);
    background-color: #012435;
    padding: 0 20px 0 0;
    font-weight: bold;
    font-size: 30px;
    
}

header nav {
    margin: 7px 0;
    display: flex;
    padding: 0 0 0 80px;
    text-decoration: none;
}

header nav ul {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap; 
}
header nav ul li {
    display: inline;
    
  }
header nav ul li a {
    margin: 0 30px;
    font-weight: lighter;
    font-size: 22px;
  }

header a {
    text-decoration: none;
  }
  
footer h3 {
    text-align: center;
}

.hero {
    background-image: url("../images/bluelines.jpg");
    background-size: cover;
    display:block;
    padding-bottom: 12%;
}

.about {
  display: flex;
  font-size: 30px;
  height: 300px;
  justify-content: flex-start;
  width: 600px;
  padding: 0 0 0 0;
}

.about-info {
    align-items: center;
    justify-content: center;
    padding: 0 0 0 30px;
    width: 600px;
    font-size: 30px;
}

.about h2 {
    box-sizing: border-box;
    padding: 0 30px 0 100px;
    font-size: 40px;
    display:inline-block;
    border-right: 4px solid black;
    height: 100px;
}

.work {
    display: flex;
    font-size: 30px;
    height: 200px;
    justify-content: flex-start;
    padding: 0 0 0 0;
    width: 600px;
    font-size: 20px;
}

.work h2 {
    box-sizing: border-box;
    padding: 0 39px 0 100px;
    font-size: 40px;
    display:inline-block;
    border-right: 4px solid black;
}

.resume {
    display: flex;
    font-size: 30px;
    height: 200px;
    justify-content: flex-start;
    padding: 20px;
    width: 600px;
    font-size: 20px;
    padding: 0 0 0 0;
    
}

.resume-info{
    font-size: 10px;
    padding: 0 39px 0 30px;
    display: inline-block;
    justify-self: space-between;

}

.resume h2 {
    box-sizing: border-box;
    padding: 0 10px 0 92px;
    font-size: 40px;
    display:inline-block;
    border-right: 4px solid black;
}

.contact-me {
    display : flex;
}
.contact-me h2 {
    display: flex;
    box-sizing: border-box;
    padding: 0 10px 0 28px;
    font-size: 40px;
    display:inline-block;
    border-right: 4px solid black;
}
.contact-info h5 {
    display: flex;
    font-size: 15px;
    padding: 0 39px 0 30px;
    display: inline-block;
    justify-self: space-between;
    text-decoration: underline;
}

